# openagent

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  PLAN.md  README.md  SOUL.md  config.json.example  docker-compose.yml  docker-setup.sh  package.json
docs/: DESIGN.md  README.md  agent.md  architecture.md  channels.md  configuration.md  core-traits.md  gateway-protocol.md  sandbox.md
docs/details/: WEBHOOK_GATEWAYS.md  agent.md  database.md  plugin-sdk.md
migrations/: .gitkeep
src/: config.rs  error.rs  lib.rs  scheduler.rs
src/agent/: agentic_loop.rs  client.rs  conversation.rs  loop_guard.rs  mod.rs  planner.rs  prompts.rs  reflector.rs  rig_client.rs  state_machine.rs  system_command.rs  tool_bridge.rs  tools.rs  types.rs  web_search.rs
src/config/: io.rs  mod.rs  paths.rs  validation.rs
src/config/types/: channel.rs  mod.rs  provider.rs  sandbox.rs  storage.rs
src/core/: channel.rs  executor.rs  mod.rs  provider.rs  storage.rs  types.rs
src/database/: agent_status.rs  config_params.rs  memory.rs  mod.rs  opensearch.rs  postgres.rs  soul.rs  tasks.rs
src/gateway/: mod.rs
src/gateway/protocol/: mod.rs  schema.rs  types.rs
src/mcp/: bridge.rs  client.rs  mod.rs  protocol.rs
src/memory/: cache.rs  embedding.rs  mod.rs  retrieval.rs  summarizer.rs
src/plugin_sdk/: manifest.rs  mod.rs  registry.rs  traits.rs
src/sandbox/: container.rs  executor.rs  mod.rs  os_sandbox.rs  wasm.rs
src/skills/: install_package.rs  mod.rs  traits.rs
src/tools/: brave_search.rs  duckduckgo_search.rs  memory.rs  mod.rs  perplexity_search.rs  read_file.rs  registry.rs  system_command.rs  task.rs  traits.rs  write_file.rs
static/: dashboard.html
